--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "project-s",
-  "version": "0.1.0",
+  "version": "1.22.22",
   "private": true,
   "dependencies": {
+    "@pixi/react": "^7.1.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
