--- a/package.json
+++ b/package.json
@@ -1,21 +1,29 @@
 {
   "name": "project-s",
-  "version": "1.22.22",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@pixi/app": "^7.4.2",
+    "@pixi/assets": "^7.4.2",
+    "@pixi/core": "^7.4.2",
+    "@pixi/display": "^7.4.2",
+    "@pixi/graphics": "^7.4.2",
+    "@pixi/mesh": "^7.4.2",
+    "@pixi/mesh-extras": "^7.4.2",
+    "@pixi/particle-container": "^7.4.2",
     "@pixi/react": "^7.1.2",
+    "@pixi/sprite": "^7.4.2",
+    "@pixi/sprite-animated": "^7.4.2",
+    "@pixi/sprite-tiling": "^7.4.2",
+    "@pixi/text": "^7.4.2",
+    "@pixi/text-bitmap": "^7.4.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.96",
-    "@types/react": "^18.2.79",
-    "@types/react-dom": "^18.2.25",
     "pixi.js": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
